# backend/docs/swagger.json
@@ -7,7 +7,7 @@
         "contact": {},
         "version": "1.0"
     },
-    "host": "ec2-43-207-54-55.ap-northeast-1.compute.amazonaws.com",
+    "host": "localhost:8080",
     "basePath": "/api",
     "paths": {
         "/categories": {
@@ -1258,6 +1258,46 @@
                 }
             }
         },
+        "/statistics/chart": {
+            "get": {
+                "description": "Возвращает статистику продаж за последний месяц или год",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Statistics"
+                ],
+                "summary": "Получить статистику продаж",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Период статистики (month, year)",
+                        "name": "period",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Список со статистикой всех продуктов",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "array",
+                                "items": {
+                                    "$ref": "#/definitions/handlers.SalesData"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Ошибка сервера",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.APIError"
+                        }
+                    }
+                }
+            }
+        },
         "/statistics/dashboard": {
             "get": {
                 "description": "Возвращает топ 10 клиентов и продуктов по сумме потраченных денег и проданных единиц за текущий месяц",
@@ -1899,6 +1939,17 @@
                 },
                 "units_sold": {
                     "type": "integer"
+                }
+            }
+        },
+        "handlers.SalesData": {
+            "type": "object",
+            "properties": {
+                "date": {
+                    "type": "string"
+                },
+                "total_amount": {
+                    "type": "number"
                 }
             }
         },
